crates/gitat-core/src/snapshots/gitat_core__graph__tests__snapshot_linear_history.snap
---
source: crates/gitat-core/src/graph.rs
expression: graph
---
[
    GraphRow {
        cells: [
            GraphCell {
                symbol: '*',
                color_index: 0,
            },
        ],
    },
    GraphRow {
        cells: [
            GraphCell {
                symbol: '*',
                color_index: 0,
            },
        ],
    },
    GraphRow {
        cells: [
            GraphCell {
                symbol: '*',
                color_index: 0,
            },
        ],
    },
]
