crates/gitat-core/src/snapshots/gitat_core__graph__tests__snapshot_simple_merge.snap
---
source: crates/gitat-core/src/graph.rs
expression: graph
---
[
    GraphRow {
        cells: [
            GraphCell {
                symbol: '*',
                color_index: 0,
            },
        ],
    },
    GraphRow {
        cells: [
            GraphCell {
                symbol: '|',
                color_index: 0,
            },
            GraphCell {
                symbol: '*',
                color_index: 1,
            },
        ],
    },
    GraphRow {
        cells: [
            GraphCell {
                symbol: '*',
                color_index: 0,
            },
            GraphCell {
                symbol: '|',
                color_index: 1,
            },
        ],
    },
    GraphRow {
        cells: [
            GraphCell {
                symbol: '*',
                color_index: 0,
            },
        ],
    },
]
